# huffman-coding

./: CMakeLists.txt  README.md  input.txt  output.txt
src/: CONFIG.h  SharedTypes.h  main.c
src/Haffman/: Decode.c  Decode.h  Encode.c  Encode.h
src/Haffman/BitReader/: BitReader.c  BitReader.h
src/Haffman/BytePrinter/: BytePrinter.c  BytePrinter.h
src/Haffman/Tree/: BuildTree.c  BuildTree.h  ExtractCodes.c  ExtractCodes.h  Node.c  Node.h  StringifyHTree.c  StringifyHTree.h
